--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "webpack --mode production",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"client": "npm run start --prefix dist",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix dist && npm run build --prefix dist"
+		"heroku-postbuild": "webpack --mode production"
 	},
 	"keywords": [],
 	"author": "",
