--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"react-modal": "^3.12.1",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
+		"react-scroll-trigger": "^0.6.10",
 		"react-switch": "^6.0.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
