--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@babel/runtime": "^7.12.5",
+		"@material-ui/core": "^4.11.3",
 		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
 		"body-parse": "^0.1.0",
