--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 		"react-beautiful-dnd": "^13.0.0",
 		"react-dnd": "^11.1.3",
 		"react-dnd-html5-backend": "^11.1.3",
+		"react-dnd-multi-backend": "^6.0.2",
 		"react-dnd-preview": "^6.0.2",
+		"react-dnd-touch-backend": "^14.0.0",
 		"react-dom": "^17.0.1",
 		"react-dotdotdot": "^1.3.1",
 		"react-gesture-responder": "^2.1.0",
@@ -47,6 +49,7 @@
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scroll-trigger": "^0.6.10",
+		"react-sticky-box": "^0.9.3",
 		"react-switch": "^6.0.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
