--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 	"dependencies": {
 		"@babel/runtime": "^7.12.5",
 		"@material-ui/core": "^4.11.3",
+		"@reactchartjs/react-chart.js": "^1.0.0-rc.3",
 		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
 		"body-parse": "^0.1.0",
 		"body-parser": "^1.19.0",
 		"body-scroll-lock": "^3.1.5",
+		"chart.js": "^2.9.4",
 		"config": "^3.3.3",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
