--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"immer": "^8.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.17",
+		"node-cron": "^3.0.0",
 		"node-fetch": "^2.6.1",
 		"path": "^0.12.7",
 		"react": "^17.0.1",
