--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"body-parser": "^1.19.0",
 		"body-scroll-lock": "^3.1.5",
 		"chart.js": "^2.9.4",
+		"clsx": "^1.1.1",
+		"colcade": "^0.2.0",
 		"config": "^3.3.3",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
@@ -30,6 +32,7 @@
 		"framer-motion": "^3.2.1",
 		"immer": "^8.0.1",
 		"jsonwebtoken": "^8.5.1",
+		"masonry-layout": "^4.2.2",
 		"mongoose": "^5.11.17",
 		"node-cron": "^3.0.0",
 		"node-fetch": "^2.6.1",
@@ -54,6 +57,7 @@
 		"react-scroll-trigger": "^0.6.10",
 		"react-sticky-box": "^0.9.3",
 		"react-switch": "^6.0.0",
+		"react-tooltip": "^4.2.21",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0"
@@ -69,6 +73,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^4.5.1",
 		"image-webpack-loader": "^7.0.1",
+		"json-loader": "^0.5.7",
 		"node-sass": "^5.0.0",
 		"sass-loader": "^10.1.1",
 		"style-loader": "^2.0.0",
